syntax = "proto3";

option csharp_namespace = "GrpcAddressBookClient.Protos";

import "google/protobuf/field_mask.proto"; // Import FieldMask

// Define a Person message
message Person {
  string name = 1;
  string email = 2;
}

// Request message for FindPerson
message FindPersonRequest {
  Person person = 1;
  google.protobuf.FieldMask field_mask = 2;
}

// Define an AddressBook message
message AddressBook {
  repeated Person persons = 1;
}

// Define the gRPC service
service AddressBookService {
  rpc GetAddressBook (Empty) returns (AddressBook);
  rpc FindPerson (FindPersonRequest) returns (stream Person);
}

// Empty message for the request
message Empty {}